--- a/ImageCropUI/MainWindow.xib
+++ b/ImageCropUI/MainWindow.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15E65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
@@ -8,6 +8,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="MainWindowController">
             <connections>
                 <outlet property="containerView" destination="34k-7I-YKt" id="n3e-ec-bri"/>
+                <outlet property="toolView" destination="ywe-yJ-OdO" id="ZIP-SC-aed"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -16,14 +17,18 @@
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="34" y="198" width="716" height="524"/>
+            <rect key="contentRect" x="34" y="198" width="1024" height="577"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1080"/>
             <view key="contentView" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="716" height="524"/>
+                <rect key="frame" x="0.0" y="0.0" width="1024" height="577"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="34k-7I-YKt">
-                        <rect key="frame" x="0.0" y="0.0" width="716" height="524"/>
+                        <rect key="frame" x="344" y="0.0" width="686" height="577"/>
+                        <animations/>
+                    </customView>
+                    <customView autoresizesSubviews="NO" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ywe-yJ-OdO">
+                        <rect key="frame" x="0.0" y="0.0" width="346" height="577"/>
                         <animations/>
                     </customView>
                 </subviews>
@@ -32,7 +37,8 @@
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
-            <point key="canvasLocation" x="-21" y="237"/>
+            <point key="canvasLocation" x="14" y="85.5"/>
         </window>
+        <customObject id="8vt-il-rwt"/>
     </objects>
 </document>
