--- a/ImageCropUI/DrawingWindow.xib
+++ b/ImageCropUI/DrawingWindow.xib
@@ -5,26 +5,25 @@
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="DrawingWindowController"/>
+        <customObject id="-2" userLabel="File's Owner" customClass="DrawingWindowController">
+            <connections>
+                <outlet property="window" destination="QvC-M9-y7g" id="C5F-QJ-Jn9"/>
+            </connections>
+        </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="480" height="365"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1080"/>
+            <rect key="contentRect" x="822" y="336" width="480" height="365"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1366" height="768"/>
+            <value key="minSize" type="size" width="480" height="365"/>
             <view key="contentView" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="365"/>
                 <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oKI-MM-5Dm">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="365"/>
-                        <animations/>
-                    </customView>
-                </subviews>
                 <animations/>
             </view>
-            <point key="canvasLocation" x="540" y="397.5"/>
+            <point key="canvasLocation" x="484" y="304.5"/>
         </window>
     </objects>
 </document>
