--- a/ImageCropUI/DrawingWindow.xib
+++ b/ImageCropUI/DrawingWindow.xib
@@ -16,14 +16,20 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="822" y="336" width="480" height="365"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1366" height="768"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1080"/>
             <value key="minSize" type="size" width="480" height="365"/>
             <view key="contentView" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="365"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aqf-nw-lYv" customClass="DrawingView">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="365"/>
+                        <animations/>
+                    </customView>
+                </subviews>
                 <animations/>
             </view>
-            <point key="canvasLocation" x="484" y="304.5"/>
+            <point key="canvasLocation" x="246" y="279.5"/>
         </window>
     </objects>
 </document>
