--- a/ImageCropUI/Base.lproj/Main.storyboard
+++ b/ImageCropUI/Base.lproj/Main.storyboard
@@ -22,13 +22,6 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
-                                        <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW"/>
-                                        <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
-                                        <menuItem title="Services" id="NMo-om-nkz">
-                                            <modifierMask key="keyEquivalentModifierMask"/>
-                                            <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
-                                        </menuItem>
-                                        <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
                                         <menuItem title="Hide ImageCropUI" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
@@ -61,23 +54,13 @@
                                     <items>
                                         <menuItem title="New" keyEquivalent="n" id="E5n-oB-Wai">
                                             <connections>
-                                                <action selector="newDocument:" target="Ady-hI-5gd" id="cMy-eg-Ymv"/>
+                                                <action selector="newDropZone:" target="Voe-Tx-rLC" id="gbL-1L-OuE"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="MLB-xc-YFg"/>
                                         <menuItem title="Close" keyEquivalent="w" id="7Rk-bi-vyI">
                                             <connections>
-                                                <action selector="performClose:" target="Ady-hI-5gd" id="Npd-l5-RZc"/>
-                                            </connections>
-                                        </menuItem>
-                                        <menuItem title="Save" keyEquivalent="s" id="SmY-0l-Xc2">
-                                            <connections>
-                                                <action selector="saveDocument:" target="Ady-hI-5gd" id="lAX-iC-8Zh"/>
-                                            </connections>
-                                        </menuItem>
-                                        <menuItem title="Save As…" keyEquivalent="S" id="Avn-ga-c8O">
-                                            <connections>
-                                                <action selector="saveDocumentAs:" target="Ady-hI-5gd" id="FgJ-uc-bs8"/>
+                                                <action selector="close:" target="Ady-hI-5gd" id="Wr1-ot-hlj"/>
                                             </connections>
                                         </menuItem>
                                     </items>
@@ -89,6 +72,9 @@
                                     <items>
                                         <menuItem title="Show Image Processing Tools" id="clx-He-eCk">
                                             <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="showToolWindow:" target="Voe-Tx-rLC" id="A2L-EZ-Yx4"/>
+                                            </connections>
                                         </menuItem>
                                         <menuItem title="Show Image Analysis Tools" id="Hqd-xX-gk1">
                                             <modifierMask key="keyEquivalentModifierMask"/>
@@ -105,7 +91,7 @@
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-529" y="-217"/>
+            <point key="canvasLocation" x="-389.5" y="-261"/>
         </scene>
     </scenes>
 </document>
