--- a/ImageCropUI/DrawingWindow.xib
+++ b/ImageCropUI/DrawingWindow.xib
@@ -7,6 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="DrawingWindowController">
             <connections>
+                <outlet property="containerView" destination="Aqf-nw-lYv" id="2hG-d4-mqu"/>
                 <outlet property="drawingView" destination="Aqf-nw-lYv" id="DIL-8V-TKi"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="C5F-QJ-Jn9"/>
             </connections>
@@ -17,13 +18,13 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="822" y="336" width="737" height="561"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1080"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1366" height="768"/>
             <value key="minSize" type="size" width="480" height="365"/>
             <view key="contentView" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="737" height="561"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aqf-nw-lYv" customClass="DrawingView">
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aqf-nw-lYv">
                         <rect key="frame" x="0.0" y="0.0" width="737" height="561"/>
                         <animations/>
                     </customView>
